test/asm/invalid-utf-8-strings.err
error: invalid-utf-8-strings.asm(16):
    STRLEN: Invalid UTF-8 byte 0xA3
error: invalid-utf-8-strings.asm(16):
    STRLEN: Invalid UTF-8 byte 0xA4
error: invalid-utf-8-strings.asm(16):
    STRLEN: Invalid UTF-8 byte 0xF0
error: invalid-utf-8-strings.asm(16):
    STRLEN: Invalid UTF-8 byte 0xA2
error: invalid-utf-8-strings.asm(17):
    STRLEN: Invalid UTF-8 byte 0xA3
error: invalid-utf-8-strings.asm(17):
    STRLEN: Invalid UTF-8 byte 0xA4
error: invalid-utf-8-strings.asm(17):
    STRLEN: Invalid UTF-8 byte 0xF0
error: invalid-utf-8-strings.asm(17):
    STRLEN: Invalid UTF-8 byte 0xA2
error: invalid-utf-8-strings.asm(17):
    STRSUB: Invalid UTF-8 byte 0xA3
error: invalid-utf-8-strings.asm(17):
    STRSUB: Invalid UTF-8 byte 0xA4
error: invalid-utf-8-strings.asm(17):
    STRSUB: Invalid UTF-8 byte 0xF0
error: invalid-utf-8-strings.asm(17):
    STRSUB: Invalid UTF-8 byte 0xA2
error: invalid-utf-8-strings.asm(21):
    STRLEN: Invalid UTF-8 byte 0xA3
error: invalid-utf-8-strings.asm(21):
    STRLEN: Invalid UTF-8 byte 0xA4
error: invalid-utf-8-strings.asm(21):
    STRLEN: Invalid UTF-8 byte 0xF0
error: invalid-utf-8-strings.asm(21):
    STRLEN: Invalid UTF-8 byte 0xA2
error: invalid-utf-8-strings.asm(22):
    STRLEN: Invalid UTF-8 byte 0xA3
error: invalid-utf-8-strings.asm(22):
    STRLEN: Invalid UTF-8 byte 0xA4
error: invalid-utf-8-strings.asm(22):
    STRLEN: Invalid UTF-8 byte 0xF0
error: invalid-utf-8-strings.asm(22):
    STRLEN: Invalid UTF-8 byte 0xA2
error: invalid-utf-8-strings.asm(22):
    STRSUB: Invalid UTF-8 byte 0xA3
error: invalid-utf-8-strings.asm(22):
    STRSUB: Invalid UTF-8 byte 0xA4
error: invalid-utf-8-strings.asm(35):
    STRLEN: Invalid UTF-8 byte 0xFE
error: invalid-utf-8-strings.asm(35):
    STRLEN: Invalid UTF-8 byte 0x81
error: invalid-utf-8-strings.asm(35):
    STRLEN: Invalid UTF-8 byte 0xFF
error: invalid-utf-8-strings.asm(36):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(36):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(36):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(39):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(39):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(39):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(39):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(39):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(40):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(40):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(40):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(40):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(40):
    Input string is not valid UTF-8
error: invalid-utf-8-strings.asm(40):
    Input string is not valid UTF-8
error: Assembly aborted (39 errors)!
